--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,3 +4,4 @@
 @import url('./global/colors.css');
 @import url('./global/utils.css');
 @import url('./global/button.css');
+@import url('./components/header.css');
