--- a/assets/css/components/header.css
+++ b/assets/css/components/header.css
@@ -1,8 +1,13 @@
 .header {
+  height: 80vh;
+  background: url('/assets/images/hero_img.svg');
+  background-repeat: no-repeat;
+  background-position: right top 60px;
 }
 
 .header__navigation {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
+  z-index: 1;
 }
